--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ share/python-wheels/
 MANIFEST
 output*/
 preview_augmentation/
+configs/
+output_tracking.mp4
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
